--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     
     <div id="sixth-row">
-        <div class="percent">%</div>
+        <div class="percent">☺ </div>
         <div class="zero">0</div>
         <div class="point">.</div>
     </div>
